design and layout changes and added cards

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,6 @@
 <footer class="bg-light py-5">
-    <div class="container"><div class="small text-center text-muted">Copyright © DSK  </div></div>
+    <div class="container"><div class="small text-center text-muted">Copyright © DSK  
+        <a tooltip="hhh" ><i class="fa fa-instagram"></i></a>
+        <a><i class="fa fa-facebook"></i></a>
+        <a><i class="fa fa-linkedin"></i></a></div></div>
 </footer>
