--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -8,7 +8,7 @@
                     <img src="assets/angular.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Angular JS</h5>
-                      <p class="card-text">I worked more than 2 years on Angular..!<br>
+                      <p class="card-text">I worked more than 2 years on Angular..!.
                         Worked on Angular7,8,9,10 and 11 and also Version 1.o</p>
                     </div>
                   </div>
@@ -16,7 +16,7 @@
                     <img src="assets/react.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">React JS</h5>
-                      <p class="card-text">I worked more than 1 year on React!<br>
+                      <p class="card-text">I worked more than 1 year on React!.
                             Good Hands on Experience on It.</p>
                     </div>
                   </div>
@@ -24,8 +24,16 @@
                     <img src="assets/frontEnd.jfif" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Frontend Base Stack</h5>
-                      <p class="card-text">I worked more than 2.7 years on These tech stack..!<br>
+                      <p class="card-text">I worked more than 2.7 years on These tech stack..!.
                         Having a deep Knowledge on each technology</p>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/MEAN.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">MEAN Stack</h5>
+                      <p class="card-text">I worked 1 year on it!.
+                        Worked on a project using MEAN stack from scrath and completed three phases of it.</p>
                     </div>
                   </div>
             <!-- <div class="col-lg-3 col-md-6 text-center">
