--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,7 +1,8 @@
 header.masthead {
     padding-top: 10rem;
     padding-bottom: calc(10rem - 4.5rem);
-    background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../../../assets/img/bg-masthead.jpg");
+    background: linear-gradient(to bottom,rgb(4 90 142 / 80%) 0%, rgb(45 48 50 / 80%) 100%), url("../../../assets/banner2.jpg");
+    // linear-gradient(to bottom, rgb(4 90 142 / 80%) 0%, rgb(45 48 50 / 80%) 100%), url(banner2.jpg)
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -10,6 +11,10 @@ header.masthead {
   header.masthead h1 {
     font-size: 2.25rem;
   }
+  .divider{
+        border-color: #44b3dd;
+    }
+
   @media (min-width: 992px) {
     header.masthead {
       height: 100vh;
@@ -29,4 +34,3 @@ header.masthead {
       font-size: 3.5rem;
     }
   }
-  
