--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -2,7 +2,7 @@
     <div class="container text-center">
         <h2 class="mb-4">You can Download My resume here...!</h2>
         <!-- <a  href="https://startbootstrap.com/theme/creative/">Download Now!</a> -->
-        <a class="btn btn-light btn-xl" href="assets/downloads/saikiran.resu.pdf" 
+        <a style=" background-color: #44b3dd" class="btn btn-light btn-xl" href="assets/downloads/saikiran.resu.pdf" 
         download="saikiranduddukuri.resume.pdf">
         Download Now!
       </a>
@@ -21,12 +21,12 @@
         <div class="row">
             <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                 <i class="fa fa-phone fa-3x mb-3 text-muted"></i>
-                <div>+91 8185059907</div>
+                <div class="d-block clrPhone">+91 8185059907</div>
             </div>
             <div class="col-lg-4 mr-auto text-center">
                 <i class="fa fa-envelope fa-3x mb-3 text-muted"></i>
                 <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                <a class="d-block" href="mailto:contact@yourwebsite.com">duddukurisai63@gmail.com</a>
+                <a class="d-block" href="mailto:duddukurisai63@gmail.com">duddukurisai63@gmail.com</a>
             </div>
         </div>
     </div>
