changed card color

--- a/src/app/components/portfilio/portfilio.component.scss
+++ b/src/app/components/portfilio/portfilio.component.scss
@@ -1,5 +1,5 @@
 .bg-primary{
-    background: #97d2e9 !important;
+    background:#0c7ca1 !important;
 }
 .bg-primary:hover{
     transition: all 0.7s;
