Addedd hover on cards and spelling mistake and added some description on view more

--- a/src/app/components/portfilio/portfilio.component.html
+++ b/src/app/components/portfilio/portfilio.component.html
@@ -81,10 +81,10 @@
                     <h5>Duration</h5>
                   <div class="durationBody" style="display: flex;">
                     <div style="text-align: left;display: flex;">
-                        <h6>Start</h6>:<h6>12-APR-2020</h6>
+                        <h6>Start : </h6><h6>Oct-2020</h6>
                     </div>
                     <div style="text-align: right;display: flex;">
-                        <h6>End</h6>:<h6>12-APR-2020</h6>
+                        <h6>End : </h6><h6>Feb-2021</h6>
                     </div>
                   </div>
                 </div>
@@ -97,16 +97,16 @@
           </div>
           <div class="boxShadow">
             <h5>Environment</h5>
-            <p>Worked on Core PHP, AngularJS,MYSQL, HTML, SCSS, Bootstrap, Java Script etc.</p>   
+            <p>Worked on Angular 9, HTML, SCSS, Bootstrap, Angular material etc.</p>   
           </div>
           <div class="boxShadow">
             <h5>Roles & Responsibilities</h5>
              <ul>
-                <li> Role is a Junior Developer </li> 
-                <li>Worked on New future’s and Bug fixes and Optimization 
-                <li> Responsible for doing unit testing of the code. </li>
-                <li> Code review and refactoring. </li>
-                <li> Involved in solving the issues which we got from QA.</li>
+                <li>Working On second phase of implementation and Every phase we are adding new functionality </li> 
+                <li>Code review and refactoring.</li>
+                <li>Responsible for doing unit testing & integration testing of the code.</li>
+                <li>Working on performance tuning to speed up the system</li>
+                <li>Involved in solving the issues which we got from QA</li>
              </ul> 
           </div>
         </div>
@@ -138,10 +138,10 @@
                     <h5>Duration</h5>
                   <div class="durationBody" style="display: flex;">
                     <div style="text-align: left;display: flex;">
-                        <h6>Start</h6>:<h6>12-APR-2020</h6>
+                        <h6>Start : </h6><h6>Oct-2020</h6>
                     </div>
                     <div style="text-align: right;display: flex;">
-                        <h6>End</h6>:<h6>12-APR-2020</h6>
+                        <h6>End : </h6><h6>Feb-2021</h6>
                     </div>
                   </div>
                 </div>
@@ -154,17 +154,17 @@
           </div>
           <div class="boxShadow">
             <h5>Environment</h5>
-            <p>Worked on Core PHP, AngularJS,MYSQL, HTML, SCSS, Bootstrap, Java Script etc.</p>   
+            <p>Worked on Python, Django Jquery,& MySql DB, CSS and bootstrap 3 etc</p>   
           </div>
           <div class="boxShadow">
             <h5>Roles & Responsibilities</h5>
-             <ul>
-                <li> Role is a Junior Developer </li> 
-                <li>Worked on New future’s and Bug fixes and Optimization 
-                <li> Responsible for doing unit testing of the code. </li>
-                <li> Code review and refactoring. </li>
-                <li> Involved in solving the issues which we got from QA.</li>
-             </ul> 
+            <ul>
+              <li>Working On second phase of implementation and Every phase we are adding new functionality </li> 
+              <li>Code review and refactoring.</li>
+              <li>Responsible for doing unit testing & integration testing of the code.</li>
+              <li>Working on performance tuning to speed up the system</li>
+              <li>Involved in solving the issues which we got from QA</li>
+           </ul> 
           </div>
         </div>
         <div class="modal-footer">
@@ -193,10 +193,10 @@
                     <h5>Duration</h5>
                   <div class="durationBody" style="display: flex;">
                     <div style="text-align: left;display: flex;">
-                        <h6>Start</h6>:<h6>12-APR-2020</h6>
+                        <h6>Start : </h6><h6>Sep-2019</h6>
                     </div>
                     <div style="text-align: right;display: flex;">
-                        <h6>End</h6>:<h6>12-APR-2020</h6>
+                        <h6>End : </h6><h6>Oct-2020</h6>
                     </div>
                   </div>
                 </div>
@@ -209,16 +209,19 @@
           </div>
           <div class="boxShadow">
             <h5>Environment</h5>
-            <p>Worked on Core PHP, AngularJS,MYSQL, HTML, SCSS, Bootstrap, Java Script etc.</p>   
+            <p>Worked on Angular 10, HTML5, SCSS, Bootstrap, Angular material etc.</p>   
           </div>
           <div class="boxShadow">
             <h5>Roles & Responsibilities</h5>
              <ul>
-                <li> Role is a Junior Developer </li> 
-                <li>Worked on New future’s and Bug fixes and Optimization 
-                <li> Responsible for doing unit testing of the code. </li>
+                <li>I was including in E2E development of the project which includes requirement gathering, 
+                  Designing, Coding activities and Maintenance</li> 
+                <li>Experimenting with latest front-end technologies as a part of implementation of the high-volume 
+                  external web app that helped to improve speed of web development.</li> 
                 <li> Code review and refactoring. </li>
                 <li> Involved in solving the issues which we got from QA.</li>
+                <li>Working on performance tuning to speed up the system.
+                </li>
              </ul> 
           </div>
         </div>
@@ -248,10 +251,10 @@
                     <h5>Duration</h5>
                   <div class="durationBody" style="display: flex;">
                     <div style="text-align: left;display: flex;">
-                        <h6>Start</h6>:<h6>12-APR-2020</h6>
+                        <h6>Start : </h6><h6>Sep-2019</h6>
                     </div>
                     <div style="text-align: right;display: flex;">
-                        <h6>End</h6>:<h6>12-APR-2020</h6>
+                        <h6>End : </h6><h6>Oct-2020</h6>
                     </div>
                   </div>
                 </div>
@@ -259,20 +262,25 @@
           
           <div class="boxShadow">
             <h5>Description</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            </p>   
+            <p>QurHealth is a healthcare data management organization with a focus on delivering innovative Healthcare 
+              IT solutions across the broader healthcare ecosystem. Built and owned by Ventech solutions, 
+              QurHealth provides holistic IT-healthcare offerings touching several healthcare players,
+               including care providers, payers, patients, and researchers. </p>   
           </div>
           <div class="boxShadow">
-            <h5>Environment</h5>
-            <p>Worked on Core PHP, AngularJS,MYSQL, HTML, SCSS, Bootstrap, Java Script etc.</p>   
+            <h5>Environment</h5>  
+            <p> Worked on MongoDb, NodeJs, Angular, HTML, SCSS, Bootstrap, Angular material etc.</p>   
           </div>
           <div class="boxShadow">
             <h5>Roles & Responsibilities</h5>
              <ul>
-                <li> Role is a Junior Developer </li> 
-                <li>Worked on New future’s and Bug fixes and Optimization 
+                <li> I was including in E2E development of the project which includes requirement gathering, 
+                  Designing, Coding activities and Maintenance</li> 
+                <li>Experimenting with latest front-end technologies as a part of implementation of the high-volume 
+                  external web app that helped to improve speed of web development. </li>
                 <li> Responsible for doing unit testing of the code. </li>
                 <li> Code review and refactoring. </li>
+                <li>Working on performance tuning to speed up the system. </li>
                 <li> Involved in solving the issues which we got from QA.</li>
              </ul> 
           </div>
@@ -303,10 +311,10 @@
                     <h5>Duration</h5>
                   <div class="durationBody" style="display: flex;">
                     <div style="text-align: left;display: flex;">
-                        <h6>Start</h6>:<h6>12-APR-2020</h6>
+                        <h6>Start : </h6><h6>Aug 2018</h6>
                     </div>
                     <div style="text-align: right;display: flex;">
-                        <h6>End</h6>:<h6>12-APR-2020</h6>
+                        <h6>End : </h6><h6>Sep-2019</h6>
                     </div>
                   </div>
                 </div>
@@ -314,12 +322,12 @@
           
           <div class="boxShadow">
             <h5>Description</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            </p>   
+            <p>Action Planner is a business management tool that involves Planning Objectives, Tracking Initiatives, Reporting 
+              Actions of individuals collaborate and share report for the accomplishment of collective goals. </p>   
           </div>
           <div class="boxShadow">
             <h5>Environment</h5>
-            <p>Worked on Core PHP, AngularJS,MYSQL, HTML, SCSS, Bootstrap, Java Script etc.</p>   
+            <p>Worked on Core PHP, AngularJS,MYSQL, HTML, SCSS, Bootstrap, Java Script etc. </p>   
           </div>
           <div class="boxShadow">
             <h5>Roles & Responsibilities</h5>
