--- a/src/app/components/portfilio/portfilio.component.scss
+++ b/src/app/components/portfilio/portfilio.component.scss
@@ -47,3 +47,9 @@ h3{
 .divider{
     border-color:white;
 }
+.modal{
+    .boxShadow:hover{
+        background: #b7b7b7;
+        color: white;
+    }
+}
