--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-                <h2 class="text-white mt-0">About me...! It's intresting to say</h2>
+                <h2 class="text-white mt-0">About me...! It's Interesting to say</h2>
                 <hr class="divider light my-4" />
                 <p class="text-white-50 mb-4">
                     <!-- My Name is Saikiran Duddukuri<br>
