design of  start and end date

--- a/src/app/components/portfilio/portfilio.component.scss
+++ b/src/app/components/portfilio/portfilio.component.scss
@@ -34,8 +34,11 @@ h3{
 }
 .duration{
     background: #e7dfdf;
-    padding: 1% 12%;
+    padding: 1% 0%;
     border-radius: 11px;
+    h5{
+        padding-left: 9%;
+    }
 }
 .durationBody{
     justify-content: space-between;
