--- a/src/app/components/portfilio/portfilio.component.html
+++ b/src/app/components/portfilio/portfilio.component.html
@@ -79,11 +79,11 @@
                 </div>
                 <div class="duration">
                     <h5>Duration</h5>
-                  <div class="durationBody" style="display: flex;">
-                    <div style="text-align: left;display: flex;">
+                  <div class="durationBody col-sm-12" style="display: flex;">
+                    <div style="text-align: left;display: flex;" class="col-sm-6">
                         <h6>Start : </h6><h6>Oct-2020</h6>
                     </div>
-                    <div style="text-align: right;display: flex;">
+                    <div style="text-align: right;display: flex;" class="col-sm-6">
                         <h6>End : </h6><h6>Feb-2021</h6>
                     </div>
                   </div>
@@ -136,12 +136,12 @@
                 </div>
                 <div class="duration">
                     <h5>Duration</h5>
-                  <div class="durationBody" style="display: flex;">
-                    <div style="text-align: left;display: flex;">
-                        <h6>Start : </h6><h6>Oct-2020</h6>
+                  <div class="durationBody col-sm-12" style="display: flex;">
+                    <div style="text-align: left;display: flex;" class="col-sm-6">
+                        <h6>Start: </h6><h6>Oct-2020</h6>
                     </div>
-                    <div style="text-align: right;display: flex;">
-                        <h6>End : </h6><h6>Feb-2021</h6>
+                    <div style="justify-content: flex-end;display: flex;" class="col-sm-6">
+                        <h6>End: </h6><h6>Feb-2021</h6>
                     </div>
                   </div>
                 </div>
@@ -191,11 +191,11 @@
                 </div>
                 <div class="duration">
                     <h5>Duration</h5>
-                  <div class="durationBody" style="display: flex;">
-                    <div style="text-align: left;display: flex;">
+                  <div class="durationBody col-sm-12" style="display: flex;">
+                    <div style="justify-content: flex-end;display: flex;" class="col-sm-6">
                         <h6>Start : </h6><h6>Sep-2019</h6>
                     </div>
-                    <div style="text-align: right;display: flex;">
+                    <div style="text-align: right;display: flex;" class="col-sm-6">
                         <h6>End : </h6><h6>Oct-2020</h6>
                     </div>
                   </div>
@@ -249,11 +249,11 @@
                 </div>
                 <div class="duration">
                     <h5>Duration</h5>
-                  <div class="durationBody" style="display: flex;">
-                    <div style="text-align: left;display: flex;">
+                  <div class="durationBody col-sm-12" style="display: flex;">
+                    <div style="justify-content: flex-end;display: flex;" class="col-sm-6">
                         <h6>Start : </h6><h6>Sep-2019</h6>
                     </div>
-                    <div style="text-align: right;display: flex;">
+                    <div style="text-align: right;display: flex;" class="col-sm-6"> 
                         <h6>End : </h6><h6>Oct-2020</h6>
                     </div>
                   </div>
@@ -309,11 +309,11 @@
                 </div>
                 <div class="duration">
                     <h5>Duration</h5>
-                  <div class="durationBody" style="display: flex;">
-                    <div style="text-align: left;display: flex;">
+                  <div class="durationBody col-sm-12" style="display: flex;">
+                    <div style="justify-content: flex-end;display: flex;" class="col-sm-6">
                         <h6>Start : </h6><h6>Aug 2018</h6>
                     </div>
-                    <div style="text-align: right;display: flex;">
+                    <div style="text-align: right;display: flex;" class="col-sm-6">
                         <h6>End : </h6><h6>Sep-2019</h6>
                     </div>
                   </div>
