added new project and updated resume

--- a/src/app/components/portfilio/portfilio.component.html
+++ b/src/app/components/portfilio/portfilio.component.html
@@ -50,23 +50,19 @@
             more</button>
         </div>
       </div>
-      <!-- <div class="card text-white bg-primary col-mb-4">
-                <div class="card-header">English3.com</div>
-                <div class="card-body">
-                    <h5 class="card-title">Primary card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                        <button type="button" class="btn viewMore">View more</button>
-                </div>
-            </div> -->
-
+      <div class="card text-white bg-primary col-mb-4">
+        <div class="card-header">Hawes & Curtis</div>
+        <div class="card-body">
+          <h5 class="card-title">E - Commerse</h5>
+          <p class="card-text">Hawes & Curtis is famous for its quintessentially British menswear and womenswear...</p>
+          <button type="button" data-toggle="modal" data-target="#hawesandcurtis" class="btn viewMore">View
+            more</button>
+        </div>
+      </div>
+     
     </div>
   </div>
-  <!-- Button trigger modal -->
-  <!-- <button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
-  </button> -->
-
+  
   <!-- Modal  -->
   <div class="modal fade" id="foodbudModal" tabindex="-1" role="dialog" aria-labelledby="foodbudModalLabel"
     aria-hidden="true">
@@ -103,10 +99,7 @@
 
           <div class="boxShadow">
             <h5>Description</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged.
+            <p>Foodbud is a  food recommendation platform that provides its users personalized food recommendations based on their food allergies, dietary and taste preferences. It helps them navigate safe and nutritious food options by simplifying ingredient analysis.
             </p>
           </div>
           <div class="boxShadow">
@@ -168,10 +161,7 @@
 
           <div class="boxShadow">
             <h5>Description</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged.
+            <p>Food safety refers to routines in the preparation, handling and storage of food meant to prevent foodborne illness and injury. In this sense, food safety is a systemic approach to hygiene and accountability that concerns every aspect of the global food industry.
             </p>
           </div>
           <div class="boxShadow">
@@ -191,7 +181,6 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
         </div>
       </div>
     </div>
@@ -231,10 +220,9 @@
 
           <div class="boxShadow">
             <h5>Description</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged.
+            <p>We believe choosing a life partner is a big and important decision, and hence work towards giving a simple and secure   matchmaking experience for you and your family. Each profile registered with us goes through a manual screening process before going live on site; we provide superior privacy controls for Free; and also verify contact information of members.
+
+              You can register for Free and search according to your specific criteria on age, height, community, profession, income, location and much more- on your computer, tablet or mobile. Regular custom mails and notifications make the process easier and take you closer to your Jeevansathi!
             </p>
           </div>
           <div class="boxShadow">
@@ -263,12 +251,12 @@
     </div>
   </div>
   <!-- Modal  -->
-  <div class="modal fade" id="qurstoreModal" tabindex="-1" role="dialog" aria-labelledby="qurstoreModalLabel"
+  <div class="modal fade" id="hawesandcurtis" tabindex="-1" role="dialog" aria-labelledby="hawesandcurtisLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="qurstoreModalLabel">Project Info</h5>
+          <h5 class="modal-title" id="hawesandcurtisLabel">Project Info</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -276,7 +264,7 @@
         <div class="modal-body">
           <div class="boxShadow">
             <div>
-              <h3>Qur Store</h3>
+              <h3>Hawes and Curtis</h3>
             </div>
             <div class="duration">
               <div class="durationBody  col-sm-12">
@@ -285,11 +273,11 @@
                 </div>
                 <div class="col-12  col-sm-3 col-lg-4 durationInlineLeft">
                   <h6>Start : </h6>
-                  <h6>Sep-2019</h6>
+                  <h6>Mar-2021</h6>
                 </div>
                 <div class="col-12  col-sm-3 col-lg-4 durationInline">
                   <h6>End : </h6>
-                  <h6>Oct-2020</h6>
+                  <h6>Aug-2021</h6>
                 </div>
               </div>
             </div>
@@ -297,14 +285,11 @@
 
           <div class="boxShadow">
             <h5>Description</h5>
-            <p>QurHealth is a healthcare data management organization with a focus on delivering innovative Healthcare
-              IT solutions across the broader healthcare ecosystem. Built and owned by Ventech solutions,
-              QurHealth provides holistic IT-healthcare offerings touching several healthcare players,
-              including care providers, payers, patients, and researchers. </p>
+            <p>Hawes & Curtis is famous for its quintessentially British menswear and womenswear ranges. With over 100 years of heritage, Hawes & Curtis has a distinguished British past and a promising international future. </p>
           </div>
           <div class="boxShadow">
             <h5>Environment</h5>
-            <p> Worked on MongoDb, NodeJs, Angular, HTML, SCSS, Bootstrap, Angular material etc.</p>
+            <p> Worked on  Angular 10, HTML, SCSS, Bootstrap etc.</p>
           </div>
           <div class="boxShadow">
             <h5>Roles & Responsibilities</h5>
@@ -377,6 +362,71 @@
               <li>Worked on New future’s and Bug fixes and Optimization
               <li> Responsible for doing unit testing of the code. </li>
               <li> Code review and refactoring. </li>
+              <li> Involved in solving the issues which we got from QA.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal  -->
+  <div class="modal fade" id="qurstoreModal" tabindex="-1" role="dialog" aria-labelledby="qurstoreModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="qurstoreModalLabel">Project Info</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="boxShadow">
+            <div>
+              <h3>Qur Store</h3>
+            </div>
+            <div class="duration">
+              <div class="durationBody  col-sm-12">
+                <div class="col-12 col-sm-3 col-lg-4 durationInlineLeft">
+                  <h6>Duration</h6>
+                </div>
+                <div class="col-12  col-sm-3 col-lg-4 durationInlineLeft">
+                  <h6>Start : </h6>
+                  <h6>Sep-2019</h6>
+                </div>
+                <div class="col-12  col-sm-3 col-lg-4 durationInline">
+                  <h6>End : </h6>
+                  <h6>Oct-2020</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="boxShadow">
+            <h5>Description</h5>
+            <p>QurHealth is a healthcare data management organization with a focus on delivering innovative Healthcare
+              IT solutions across the broader healthcare ecosystem. Built and owned by Ventech solutions,
+              QurHealth provides holistic IT-healthcare offerings touching several healthcare players,
+              including care providers, payers, patients, and researchers. </p>
+          </div>
+          <div class="boxShadow">
+            <h5>Environment</h5>
+            <p> Worked on MongoDb, NodeJs, Angular, HTML, SCSS, Bootstrap, Angular material etc.</p>
+          </div>
+          <div class="boxShadow">
+            <h5>Roles & Responsibilities</h5>
+            <ul>
+              <li> I was including in E2E development of the project which includes requirement gathering,
+                Designing, Coding activities and Maintenance</li>
+              <li>Experimenting with latest front-end technologies as a part of implementation of the high-volume
+                external web app that helped to improve speed of web development. </li>
+              <li> Responsible for doing unit testing of the code. </li>
+              <li> Code review and refactoring. </li>
+              <li>Working on performance tuning to speed up the system. </li>
               <li> Involved in solving the issues which we got from QA.</li>
             </ul>
           </div>
