Updated Insta link and resume and top scroll

--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,33 +1,40 @@
 <section class="page-section bg-dark text-white">
-    <div class="container text-center">
-        <h2 class="mb-4">You can Download My resume here...!</h2>
-        <!-- <a  href="https://startbootstrap.com/theme/creative/">Download Now!</a> -->
-        <a style=" background-color: #44b3dd" class="btn btn-light btn-xl" href="assets/downloads/saikiran.resu.pdf" 
-        download="saikiranduddukuri.resume.pdf">
-        Download Now!
-      </a>
-    </div>
+  <div class="container text-center">
+    <h2 class="mb-4">You can Download My resume here...!</h2>
+    <a
+      style="background-color: #44b3dd"
+      class="btn btn-light btn-xl"
+      href="assets/downloads/Saikiran-Angular-Resume.pdf"
+      download="saikiran-duddukuri.resume.pdf"
+    >
+      Download Now!
+    </a>
+  </div>
 </section>
 <section class="page-section" id="contact">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8 text-center">
-                <h2 class="mt-0">Let's Get In Touch!</h2>
-                <hr class="divider my-4" />
-                <p class="text-muted mb-5">Ready to start your next project with me? I'm waiting for your response.... </p>
-            </div>
-        </div>
-        <!-- Give us a call or send us an email and I will get back to you as soon as possible! -->
-        <div class="row">
-            <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                <i class="fa fa-phone fa-3x mb-3 text-muted"></i>
-                <div class="d-block clrPhone">+91 8185059907</div>
-            </div>
-            <div class="col-lg-4 mr-auto text-center">
-                <i class="fa fa-envelope fa-3x mb-3 text-muted"></i>
-                <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                <a class="d-block" href="mailto:duddukurisai63@gmail.com">duddukurisai63@gmail.com</a>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 text-center">
+        <h2 class="mt-0">Let's Get In Touch!</h2>
+        <hr class="divider my-4" />
+        <p class="text-muted mb-5">
+          Ready to start your next project with me? I'm waiting for your
+          response....
+        </p>
+      </div>
     </div>
+
+    <div class="row contact-info">
+      <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+        <i class="fa fa-phone fa-3x mb-3 text-muted"></i>
+        <div class="d-block clrPhone">+91 8185059907</div>
+      </div>
+      <div class="col-lg-4 mr-auto text-center">
+        <i class="fa fa-envelope fa-3x mb-3 text-muted"></i>
+        <a class="d-block" href="mailto:saikiran.angular@gmail.com"
+          >saikiran.angular@gmail.com</a
+        >
+      </div>
+    </div>
+  </div>
 </section>
