--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,18 @@
 <footer class="bg-light py-5">
-    <div class="container"><div class="small text-center text-muted">Copyright © DSK  
-        <a  href="https://www.instagram.com/_mr_kiran______" target="_blank"><i class="fa fa-instagram"></i></a>
-        <a href="http://www.facebook.com/saikiran.dsk.31" target="_blank"><i class="fa fa-facebook"></i></a>
-        <a href="https://www.linkedin.com/in/saikiran-duddukuri-378ba81b7/" target="_blank"><i class="fa fa-linkedin"></i></a></div></div>
+  <div class="container">
+    <div class="small text-center text-muted">
+      Copyright © DSK
+      <a href="https://www.instagram.com/mr_kiran_0063/" target="_blank"
+        ><i class="fa fa-instagram"></i
+      ></a>
+      <a href="http://www.facebook.com/saikiran.dsk.31" target="_blank"
+        ><i class="fa fa-facebook"></i
+      ></a>
+      <a
+        href="https://www.linkedin.com/in/saikiran-duddukuri-378ba81b7/"
+        target="_blank"
+        ><i class="fa fa-linkedin"></i
+      ></a>
+    </div>
+  </div>
 </footer>
