--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -10,3 +10,9 @@ a:nth-child(2){
 a:nth-child(3){
     color: rgb(9, 166, 228);
 }
+i{
+    transition: font-size 0.5s;
+}
+a i:hover{
+    font-size: 20px;
+}
