--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="small text-center text-muted">
       Copyright © DSK
-      <a href="https://www.instagram.com/mr_kiran_0063/" target="_blank"
+      <a href="https://www.instagram.com/saikiran_11421/?next=%2F" target="_blank"
         ><i class="fa fa-instagram"></i
       ></a>
-      <a href="http://www.facebook.com/saikiran.dsk.31" target="_blank"
+      <a href="https://www.facebook.com/people/Saikiran-Duddukuri/100086939623790/" target="_blank"
         ><i class="fa fa-facebook"></i
       ></a>
       <a
