--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -67,7 +67,6 @@ a{
 }
 .changeCOlor{
   background: #0491c6;
-  // transition: transform 0.3s;
   transition: height 0.7s;
 }
 .collapsedBgColor{
@@ -78,7 +77,7 @@ a{
 .navbar-nav{
   .nav-item{
     transition: all 0.5s;
-    text-align: centera;
+    text-align: center;
   }
   .nav-item:hover{
     background: #70b2e1;
