--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -32,7 +32,7 @@
       <div class="col-lg-4 mr-auto text-center">
         <i class="fa fa-envelope fa-3x mb-3 text-muted"></i>
         <a class="d-block" href="mailto:kiran.angular.dev@gmail.com"
-          >kiran.angular.dev@gmail.com</a
+          >duddukurisai63@gmail.com</a
         >
       </div>
     </div>
