--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,11 +5,7 @@
                 <h2 class="text-white mt-0">About me...! It's Interesting to say</h2>
                 <hr class="divider light my-4" />
                 <p class="text-white-50 mb-4">
-                    <!-- My Name is Saikiran Duddukuri<br>
-                    I'm a Frontend developer and Having good knoledge multiple technologies<br> -->
-                    “I'm an experienced software engineer who constantly seeks out innovative solutions to everyday problems.
-                     In my Three years in this industry, I've honed my analytical thinking and collaboration skills, and I love working with a team. 
-                     I've also had the opportunity to serve as the software engineer lead for two projects with Angular Technology.
+                    Senior Front End/UI-Angular 2+ Developer with 4.8+ years of hands-on experience efficiently coding websites and applications using modern HTML, CSS, and JavaScript, AngularX Translate designs to front-end code, estimate time and determine developer requirements and specifications. Collaborate with creative and development teams on the execution of ideas and projects
                 </p>
                 <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find My Skills</a>
             </div>
