--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -11,11 +11,12 @@
       </div>
       <div class="col-lg-8 align-self-baseline">
         <h3 class="text-uppercase text-white font-weight-bold">DsK</h3>
-        <a
-          class="btn btn-primary btn-xl js-scroll-trigger"
-          style="background-color: #44b3dd"
-          href="#about"
-          >Find Out More</a
+        <a href="#about"
+          ><button class="pushable">
+            <span class="front">
+              Find Out More
+            </span>
+          </button></a
         >
       </div>
     </div>
