--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,13 +1,13 @@
-<section class="page-section bg-dark text-white">
+<section class="page-section bg-dark text-white" *ngIf="data">
   <div class="container text-center">
-    <h2 class="mb-4">You can Download My resume here...!</h2>
+    <h2 class="mb-4">{{data.titleResume}}</h2>
     <a
       style="background-color: #44b3dd"
       class="btn btn-light btn-xl"
-      href="assets/downloads/saikiran-duddukuri-ANGULARX-DEV.pdf"
-      download="saikiran-duddukuri-ANGULARX-DEV.pdf"
+      href={{data.link}}
+      download={{data.emailName}}
     >
-      Download Now!
+     {{data.buttonText}}
     </a>
   </div>
 </section>
@@ -15,11 +15,10 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
-        <h2 class="mt-0">Let's Get In Touch!</h2>
+        <h2 class="mt-0">{{data.title}}</h2>
         <hr class="divider my-4" />
         <p class="text-muted mb-5">
-          Ready to start your next project with me? I'm waiting for your
-          response....
+          {{data.subTitle}}
         </p>
       </div>
     </div>
@@ -27,12 +26,12 @@
     <div class="row contact-info">
       <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
         <i class="fa fa-phone fa-3x mb-3 text-muted"></i>
-        <div class="d-block clrPhone">+91 8185059907</div>
+        <div class="d-block clrPhone">{{data.number}}</div>
       </div>
       <div class="col-lg-4 mr-auto text-center">
         <i class="fa fa-envelope fa-3x mb-3 text-muted"></i>
         <a class="d-block" href="mailto:kiran.angular.dev@gmail.com"
-          >duddukurisai63@gmail.com</a
+          >{{data.email}}</a
         >
       </div>
     </div>
