--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,18 +1,17 @@
 
-<section class="page-section" id="services">
+<section class="page-section" id="services" *ngIf="data">
     <div class="container">
         <h2 class="text-center mt-0">My Stack</h2>
         <hr class="divider my-4" />
         <div class="row setCards">
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/angular.jpg" class="card-img-top" alt="...">
+                <div class="card" style="width: 18rem;" *ngFor="let stack of data.stack">
+                    <img src={{stack.image}} class="card-img-top" alt={{stack.name}}>
                     <div class="card-body">
-                      <h5 class="card-title">Angular JS</h5>
-                      <p class="card-text">I worked more than 4 years on Angular..!.
-                        Worked on Angular7,8,9,10 and 11 and also Version 1.o</p>
+                      <h5 class="card-title">{{stack.name}}</h5>
+                      <p class="card-text">{{stack.description}}</p>
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <!-- <div class="card" style="width: 18rem;">
                     <img src="assets/react.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">React JS</h5>
@@ -35,14 +34,8 @@
                       <p class="card-text">I worked 1 year on it!.
                         Worked on a project using MEAN stack from scrath and completed three phases of it.</p>
                     </div>
-                  </div>
-            <!-- <div class="col-lg-3 col-md-6 text-center">
-                <div class="mt-5">
-                    <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                    <h3 class="h4 mb-2"></h3>
-                    <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-                </div>
-            </div> -->
+                  </div> -->
+          
         </div>
     </div>
 </section>
