--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="small text-center text-muted">
        {{data.description}}
-      <a href={{data.instagram}} target="_blank"
+      <!-- <a href={{data.instagram}} target="_blank"
         ><i class="fa fa-instagram"></i
-      ></a>
+      ></a> -->
       <a href={{data.facebook}} target="_blank"
         ><i class="fa fa-facebook"></i
       ></a>
