--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -21,7 +21,7 @@ a{
     width: 160px;
   }
   .nav-item:hover{
-    background: #70b2e1;
-    border-radius: 50%;
+    // background: #70b2e1;
+    // border-radius: 50%;
   }
 }
