--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <!-- Services-->
         <services></services>
         <!-- Portfolio-->
-        <portfilio></portfilio>
+        <!-- <portfilio></portfilio> -->
         <!-- Call to action-->
         <contact-us></contact-us>
         <!-- Contact-->
