--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -30,7 +30,7 @@
       </div>
       <div class="col-lg-4 mr-auto text-center">
         <i class="fa fa-envelope fa-3x mb-3 text-muted"></i>
-        <a class="d-block" href="mailto:kiran.angular.dev@gmail.com"
+        <a class="d-block" href="mailto:saikiranduddukuri03@gmail.com"
           >{{data.email}}</a
         >
       </div>
